[project]
name = "l0ps"
version = "0.1.0"
description = "L0 WAVES Payment Script"
authors = [
    {name = "Sunchaser",email = "qflcpt@protonmail.com"}
]
license = {text = "+"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywaves (>=1.0.5,<2.0.0)",
    "python-axolotl-curve25519 @ git+https://github.com/ysavchenko/python-axolotl-curve25519.git"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
