[project]
name = "l0ps"
version = "0.1.0"
description = "L0 WAVES Payment Script"
authors = [
    {name = "Sunchaser23",email = "qflcpt@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "pywaves-ce (==2.0.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
